--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1621,6 +1621,14 @@
     <string name="attribute_survey_marker_no">Not near a Survey Marker</string>
     <string name="attribute_offset_cache_yes">Offset cache</string>
     <string name="attribute_offset_cache_no">No offset cache</string>
+    <string name="attribute_bonuscache_yes">Bonus cache</string>
+    <string name="attribute_bonuscache_no">No bonus cache</string>
+    <string name="attribute_powertrail_yes">Part of a power trail</string>
+    <string name="attribute_powertrail_no">Not part of a power trail</string>
+    <string name="attribute_challengecache_yes">Challenge cache</string>
+    <string name="attribute_challengecache_no">No challenge cache</string>
+    <string name="attribute_hqsolutionchecker_yes">Geocaching.com solution checker enabled</string>
+    <string name="attribute_hqsolutionchecker_no">Geocaching.com solution checker not enabled</string>
 
     <!-- next things -->
     <string name="quote">To make geocaching easier, to make users lazier.</string>
