--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -640,9 +640,15 @@
     <string name="init_backup_restore">Restore</string>
     <string name="init_restore_restored">Restoration completed</string>
     <string name="init_backup_start_restore">Start restore</string>
+    <string name="init_backup_backup_history">Backup history</string>
+    <string name="init_backup_create_backup_history">Create backup history</string>
+    <string name="init_backup_history_disabled">Backup history disabled. Do you want to remove all your archived backups?</string>
+    <string name="init_user_confirmation">I know what I\'m doing</string>
+    <string name="init_backup_backup_history_summary">The previous backup will be moved to %s while creating a new one. Depending on the backup size, this could lead to high disk usage!</string>
     <string name="init_backup_success">c:geo\'s database was successfully copied to:</string>
     <string name="init_backup_failed">Backup of c:geo\'s database failed.</string>
     <string name="init_backup_unnecessary">Database is empty, no backup necessary.</string>
+    <string name="init_backup_move_directory_error">Couldn\'t move backup files to the archive folder. There are probably multiple backups created on the same day.</string>
     <string name="init_backup_no_backup_available">There is no backup file available.</string>
     <string name="backup_confirm_overwrite">Do you want to overwrite the existing backup from %s?</string>
     <string name="restore_confirm_overwrite_database">WARNING: This will overwrite %s on your device!</string>
