add missing OC attributes
fixes #7705

In the part for `attributes_okapi` I decided to remove the old eclipse configuration
and switch to manual compilation for the attribute_definition.xml analyze tool.

This tool is updated for all OC location and results in more information.

The readme.txt covers the changes.

The attribute_definition.xml was updated from the current okapi version.

In the part `attributes` the icon workflow was refreshed.
This is covert in the readme.txt there.

The shell scripts got some code cleanup.
Only the cache icon overview script changes to present the acode instead of the OCDE code.

The OCDE icons overview file was refreshed and renamed to make clear the OCDE reference.
It got two additional attribute lines.

For the 8 new OC attributes I created the attribute icons based on PD/CC licenced vector images.

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1657,6 +1657,22 @@
     <string name="attribute_challengecache_no">No challenge cache</string>
     <string name="attribute_hqsolutionchecker_yes">Geocaching.com solution checker enabled</string>
     <string name="attribute_hqsolutionchecker_no">Geocaching.com solution checker not enabled</string>
+    <string name="attribute_handicaching_yes">Rated on Handicaching.com</string>
+    <string name="attribute_handicaching_no">Not rated on Handicaching.com</string>
+    <string name="attribute_munzee_yes">Contains a Munzee</string>
+    <string name="attribute_munzee_no">Contains no Munzee</string>
+    <string name="attribute_ads_yes">Contains advertising</string>
+    <string name="attribute_ads_no">Contains no advertising</string>
+    <string name="attribute_military_area_yes">Military training area</string>
+    <string name="attribute_military_area_no">No military training area</string>
+    <string name="attribute_video_surveil_yes">Video surveillance</string>
+    <string name="attribute_video_surveil_no">No video surveillance</string>
+    <string name="attribute_trackables_yes">Trackables</string>
+    <string name="attribute_trackables_no">Trackables</string>
+    <string name="attribute_historic_yes">Historic</string>
+    <string name="attribute_historic_no">Not historic</string>
+    <string name="attribute_blind_people_yes">Handicap: Blind</string>
+    <string name="attribute_blind_people_no">No handicap: Blind</string>
 
     <!-- next things -->
     <string name="quote">To make geocaching easier, to make users lazier.</string>
