--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -642,17 +642,20 @@
     <string name="init_backup_restore">Restore</string>
     <string name="init_restore_restored">Restoration completed</string>
     <string name="init_backup_start_restore">Start restore</string>
+    <string name="init_backup_restore_different_backup">Restore a different backup</string>
     <string name="init_backup_backup_history">Backup history</string>
-    <string name="init_backup_create_backup_history">Create backup history</string>
-    <string name="init_backup_history_disabled">Backup history disabled. Do you want to remove all your archived backups?</string>
+    <string name="init_backup_history_length_title">Maximum stored backups</string>
+    <string name="init_backup_history_length_summary">Decide how many backups should be saved. When the limmit is reached, the oldest ones are automatically deleted.</string>
+    <string name="init_backup_history_length_min">Only recent</string>
+    <string name="init_backup_history_length_max">Keep all</string>
+    <string name="init_backup_history_delete_warning">You have saved more backups than your configured maximum value allows. Do you really want to remove all excess backups?</string>
     <string name="init_user_confirmation">I know what I\'m doing</string>
-    <string name="init_backup_backup_history_summary">The previous backup will be moved to %s while creating a new one. Depending on the backup size, this could lead to high disk usage!</string>
     <string name="init_backup_success">c:geo\'s database was successfully copied to:</string>
     <string name="init_backup_failed">Backup of c:geo\'s database failed.</string>
     <string name="init_backup_unnecessary">Database is empty, no backup necessary.</string>
     <string name="init_backup_folder_exists_error">Couldn\'t create a new backup directory. Have you already made a backup in the last minute?</string>
     <string name="init_backup_no_backup_available">There is no backup file available.</string>
-    <string name="backup_confirm_overwrite">Do you want to overwrite the existing backup from %s?</string>
+    <string name="backup_confirm_overwrite">Do you want to overwrite your oldest existing backup from %s?</string>
     <string name="restore_confirm_overwrite_database">WARNING: This will overwrite %s on your device!</string>
     <string name="restore_confirm_overwrite_database_and_settings">WARNING: This will overwrite %s and your current settings on your device!</string>
     <string name="restore_confirm_overwrite_settings">WARNING: This will overwrite your current settings on your device!</string>
@@ -662,6 +665,8 @@
     <string name="init_restore_failed">Restoration failed.</string>
     <string name="init_restore_running">Restoring cache database…</string>
     <string name="init_restore_confirm">Database is empty. Do you want to restore the database backup?</string>
+    <string name="init_backup_database_moved_to_new_folder">Your existing database backup was moved to %s</string>
+    <string name="init_backup_settings_moved_to_new_folder">Your existing settings backup was moved to %s</string>
     <string name="init_backup_last">Available backup from</string>
     <string name="init_backup_unavailable">not available</string>
     <string name="init_backup_last_no">There is no file with a backup.</string>
