--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -629,7 +629,7 @@
 
     <!-- backup / restore -->
     <string name="init_backup_title">Create Backup</string>
-    <string name="init_backup_summary">Please note that this feature can backup caches, waypoints &amp; settings, but no cache images. In order to be able to restore the data even after losing your phone, the backup files should be copied to an independent location.</string>
+    <string name="init_backup_summary">Please note that this feature can backup caches, waypoints &amp; settings, but no cache images. \nIn order to be able to restore the data even after losing your phone, the backup files should be copied to an independent location.</string>
     <string name="init_restore_title">Restore Backup</string>
     <string name="init_backup_caches">caches and waypoints</string>
     <string name="init_backup_program_settings">program settings</string>
@@ -645,7 +645,7 @@
     <string name="init_backup_restore_different_backup">Restore a different backup</string>
     <string name="init_backup_backup_history">Backup history</string>
     <string name="init_backup_history_length_title">Maximum stored backups</string>
-    <string name="init_backup_history_length_summary">Decide how many backups should be saved. When the limmit is reached, the oldest ones are automatically deleted.</string>
+    <string name="init_backup_history_length_summary">Decide how many backups should be saved. When the limit is reached, the oldest ones are automatically deleted.</string>
     <string name="init_backup_history_length_min">Only recent</string>
     <string name="init_backup_history_length_max">Keep all</string>
     <string name="init_backup_history_delete_warning">You have saved more backups than your configured maximum value allows. Do you really want to remove all excess backups?</string>
@@ -665,8 +665,6 @@
     <string name="init_restore_failed">Restoration failed.</string>
     <string name="init_restore_running">Restoring cache database…</string>
     <string name="init_restore_confirm">Database is empty. Do you want to restore the database backup?</string>
-    <string name="init_backup_database_moved_to_new_folder">Your existing database backup was moved to %s</string>
-    <string name="init_backup_settings_moved_to_new_folder">Your existing settings backup was moved to %s</string>
     <string name="init_backup_last">Available backup from</string>
     <string name="init_backup_unavailable">not available</string>
     <string name="init_backup_last_no">There is no file with a backup.</string>
