WP calc: lower-case all equation variables on demand (fix #9213)

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1131,6 +1131,7 @@
     <string name="cc_hint_minutes">minutes</string>
     <string name="cc_hint_seconds">seconds</string>
     <string name="cc_hint_fraction">fraction</string>
+    <string name="lowercase">lower-case</string>
 
     <!-- editor dialog -->
 
