related to #9292: make attribution calc asynchronous

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -812,8 +812,9 @@
     <string name="map_source_osm_osmde">OpenStreetMap.de</string>
     <string name="map_source_osm_cyclosm">CyclOSM</string>
     <string name="map_source_osm_offline">Offline</string>
+    <string name="map_source_osm_offline_attribution_pleasewait">(Please wait…)</string>
     <string name="map_source_osm_offline_combined">Combined (Offline)</string>
-    <string name="map_source_osm_offline_combined_attribution_pleasewait">Combined (%d maps, please wait...)</string>
+    <string name="map_source_osm_offline_combined_attribution_pleasewait">Combined (%d maps, please wait…)</string>
     <string name="map_source_osm_offline_combined_attribution_details">Combined (%d maps, %d attributions): click for details</string>
     <string name="map_source_osm_offline_combined_attribution_single">Combined (%d maps): %s</string>
     <string name="map_source_osm_offline_combined_attribution_dialog_title">Combined map attribution</string>
