--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1120,6 +1120,7 @@
 
 
     <string name="create_internal_cache">Create user-defined cache</string>
+    <string name="create_internal_cache_short">New cache</string>
     <string name="internal_cache_default_name">User defined cache #%1$d</string>
     <string name="internal_cache_default_description">This is a user-defined cache</string>
     <string name="internal_cache_default_owner">You</string>
@@ -1302,6 +1303,7 @@
     <string name="search_tb_hint">Trackable identification</string>
     <string name="search_tb_button">Search for trackable</string>
     <string name="search_destination">Open destination in c:geo</string>
+    <string name="add_target_to">Add target to</string>
     <string name="search_address_started">Searching for places</string>
     <string name="search_address_result">Found places</string>
     <string name="search_own_caches">Search my caches</string>
