--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -230,6 +230,7 @@
     <string name="err_parse_lat_lon">c:geo can\'t parse latitude or longitude.</string>
     <string name="err_rendertheme_file_unreadable">Could not load the selected render theme. Reverting to the built-in one.</string>
     <string name="err_rendertheme_invalid">The selected render theme is not valid for this mapsforge version. Reverting to the built-in one.</string>
+    <string name="err_invalid_filename_char">Character \'%c\' not allowed</string>
     <string name="warn_save_nothing">There is nothing to be saved.</string>
     <string name="warn_no_cache_coord">There are no caches with coordinates.</string>
     <string name="warn_no_coordinates">No Coordinates given.</string>
@@ -1429,6 +1430,7 @@
     <string name="export_modifiedcoords_success">Upload successful</string>
     <string name="export_modifiedcoords_result" tools:ignore="PluralsCandidate">Upload finished: %1$d failed / %2$d ok</string>
     <string name="export_modifiedcoords_error">Upload failed</string>
+    <string name="filename_without_extension">Filename (without extension)</string>
 
     <!-- GC attributes -->
     <string name="attribute_dogs_yes">Dogs allowed</string>
