--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1983,6 +1983,7 @@
     <string name="downloadmap_allow_metered_network">Allow download over metered network (e.g.: mobile connection)</string>
     <string name="downloadmap_confirmation">Download map \"%1$s\"?\n\nThis may take quite some time and can lead to significant costs, depending on your network connection.\n\nSize info: %2$s</string>
     <string name="downloadmap_handling">The download itself will be handled by your system\'s download manager in the background. You should see a notification as soon as the download started (which may take a while).</string>
+    <string name="button_continue">Continue</string>
 
     <!-- history track -->
     <string name="map_clear_trailhistory">Clear history track</string>
