allow adding of new settings (fix #9123)

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1959,6 +1959,12 @@
     <string name="edit_setting_error_invalid_data">Invalid data \"%s\" entered. Setting\'s value unchanged.</string>
     <string name="activate_editmode_title">Activate edit mode</string>
     <string name="activate_editmode_warning">You are entering dangerous area here!\n\nChanging settings directly might confuse c:geo or might prevent further program starts, so be careful!\n\nAre you sure you want to proceed at your own risk?</string>
+    <string name="add_setting">Add setting</string>
+    <string name="add_setting_preference_name">Preference name</string>
+    <string name="add_setting_preference_type">Preference type</string>
+    <string name="add_setting_missing_name">You need to select a preference name</string>
+    <string name="add_setting_missing_type">You need to select a preference type</string>
+    <string name="add_setting_already_exists">A preference with this name already exists</string>
 
     <!-- HandleLocalFilesActivity -->
     <string name="localfile_intenttitle">c:geo Local file handler</string>
