switch map settings from PopupMenu to AlertDialog (rel. to #8138)

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1281,6 +1281,7 @@
     <string name="map_routing_car">Car</string>
     <string name="map_gm_autorotation">Map auto rotation</string>
     <string name="map_gm_autorotation_disable">Disable map auto rotation?\n\nYou can enable it again using the Map rotation menu</string>
+    <string name="quick_settings">Quick settings</string>
 
     <!-- search -->
     <string name="search_bar_hint">Search for caches</string>
