make custom tabs configurable

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -614,6 +614,8 @@
     <string name="init_summary_archived">Exclude archived caches</string>
     <string name="init_global_wp_extraction_disable">Disable waypoint extraction</string>
     <string name="init_summary_global_wp_extraction_disable">Globally disable waypoint extraction from personal cache notes. It can still be enabled for individual caches by deactivating the checkbox below the personal cache note</string>
+    <string name="init_customtabs_as_browser">Use Chrome webview</string>
+    <string name="init_summary_customtabs_as_browser">External websites will be displayed without leaving c:geo (only possible if Chrome is installed)</string>
     <string name="init_save_log_img">Save Images</string>
     <string name="init_summary_save_log_img">Save Images from Logs</string>
     <string name="init_units">Use Imperial Units</string>
