--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -595,6 +595,7 @@
     <string name="init_summary_address">Show address instead of coordinates on main screen</string>
     <string name="init_useenglish">Use English</string>
     <string name="init_summary_useenglish">Use English language for c:geo (Restart needed)</string>
+    <string name="init_category_exclude">Exclude caches</string>
     <string name="init_exclude">Exclude Own and Found</string>
     <string name="init_summary_exclude">Exclude caches you own or have found</string>
     <string name="init_showwaypoints">Show Waypoints</string>
